--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,15 @@
 PORT = 5000
 
 # DATABASE
-DB_HOST = 192.168.3.12
-DB_PORT = 30593
-DB_USER = postgres
+DB_HOST = localhost
+DB_PORT = 5432
+DB_USERNAME = postgres
 DB_PASSWORD = tecinus123
-DB_DATABASE = vip-native
+DB_DATABASE = sale_account_tiktok
+DB_LOGGING = false
+DB_SYNC = true
+DB_AUTO_LOAD = true
+
 
 # TOKEN
 SECRET_KEY = secretKey
