--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # PORT
-PORT = 5000
+PORT = 5001
 
 # DATABASE
 DB_HOST = localhost
@@ -11,7 +11,9 @@ DB_LOGGING = false
 DB_SYNC = true
 DB_AUTO_LOAD = true
 
-
 # TOKEN
-SECRET_KEY = secretKey
+JWT_SECRET_KEY='Penguin!@#'
+JWT_EXPIRES_IN=365d
+JWT_REFRESH_TOKEN_KEY='Penguin!@#REFRESH_TOKEN'
+JWT_REFRESH_TOKEN_EXPIRES_IN=365d
 
