--- a/backend/package.json
+++ b/backend/package.json
@@ -40,7 +40,8 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "sequelize": "^6.25.3",
-        "sequelize-typescript": "^2.1.5"
+        "sequelize-typescript": "^2.1.5",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
@@ -49,6 +50,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "28.1.8",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.0.0",
         "@types/passport-jwt": "^3.0.8",
         "@types/supertest": "^2.0.11",
