--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,11 @@
 PORT = 5001
 
 # DATABASE
-DB_HOST = localhost
-DB_PORT = 5432
+DB_HOST = containers-us-west-39.railway.app
+DB_PORT = 6175
 DB_USERNAME = postgres
-DB_PASSWORD = tecinus123
-DB_DATABASE = sale_account_tiktok
+DB_PASSWORD = 4kchhYs40PZNIU010Fd2
+DB_DATABASE = railway
 DB_LOGGING = false
 DB_SYNC = true
 DB_AUTO_LOAD = true
