--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -45,11 +45,12 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.6.0",
-    "@emotion/react": "^11.7.0",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.70",
-    "@mui/material": "^5.4.3",
+    "@mui/material": "^5.11.4",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.2.2",
