--- a/typescript-version/.eslintrc.json
+++ b/typescript-version/.eslintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "prettier"],
   "rules": {
     "react/display-name": "off",
     "@next/next/no-img-element": "off",
@@ -44,22 +40,16 @@
       }
     ]
   },
-  "plugins": [
-    "import"
-  ],
+  "plugins": ["import"],
+  "ignorePatterns": ["next.config.js"],
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".tsx"
-      ]
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
       "typescript": {
         "alwaysTryTypes": true,
-        "project": [
-          "./tsconfig.json"
-        ]
+        "project": ["./tsconfig.json"]
       }
     }
   }
