--- a/typescript-version/package.json
+++ b/typescript-version/package.json
@@ -55,6 +55,7 @@
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.2.2",
     "clsx": "^1.1.1",
+    "dotenv": "^16.0.3",
     "mdi-material-ui": "^7.1.0",
     "moment": "^2.29.4",
     "next": "12.0.4",
